# lat_long_caminhoneiro

./: .dockerignore  .gitignore  PLANNING.md  build-apk.ps1  deploy.env.example  deploy.ps1  docker-compose.deploy.yml  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/src/app/: main.py
backend/src/app/application/services/: auth_service.py  caminhoneiro_service.py  localizacao_service.py
backend/src/app/domain/entities/: caminhoneiro.py  localizacao.py
backend/src/app/domain/exceptions/: __init__.py
backend/src/app/domain/repositories/: caminhoneiro_repository.py  localizacao_repository.py
backend/src/app/domain/schemas/: auth_schema.py  caminhoneiro_schema.py  localizacao_schema.py
backend/src/app/infrastructure/config/: settings.py
backend/src/app/infrastructure/database/: connection.py
backend/src/app/infrastructure/repositories/: caminhoneiro_repository_impl.py  localizacao_repository_impl.py
backend/src/app/infrastructure/security/: google_oauth.py  jwt_handler.py
backend/src/app/interfaces/api/v1/dependencies/: auth_dependency.py
backend/src/app/interfaces/api/v1/routers/: auth_router.py  caminhoneiros_router.py  localizacoes_router.py  websocket_router.py
backend/src/app/interfaces/api/v1/websocket/: connection_manager.py
mobile/: app.json  eas.json  google-services.json  package-lock.json  package.json
web/: index.html  package.json  tsconfig.json  vite.config.ts
(+48 files in other folders)
